Closed Bug 662766 Opened 14 years ago Closed 14 years ago

parseInt fast path should return integers instead of doubles

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

(Keywords: perf)

Attachments

(1 file, 1 obsolete file)

Many inline paths don't handle doubles so this can cause large performance problems. The TI branch had a fix for this but it regressed again, probably after merging bug 653153.
Attached patch Patch (obsolete) — Splinter Review
Strictly speaking this is not a TI bug, but since TI will merge soon I think we should fix it there to prevent merge problems.
Attachment #537984 - Flags: review?(bhackett1024)
Comment on attachment 537984 [details] [diff] [review] Patch setNumber returns whether the number is an int32 (JM branch only), so this can be simplified a bit.
Attachment #537984 - Flags: review?(bhackett1024) → review+
Attached patch PatchSplinter Review
Rewrote some other calls that use the same setNumber pattern.
Attachment #537984 - Attachment is obsolete: true
Attachment #538063 - Flags: review?(bhackett1024)
Attachment #538063 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: